--- a/Exercise1/index.css
+++ b/Exercise1/index.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 a{
@@ -27,7 +28,7 @@ header input{
     float: right;
     margin-top: 27px;
     margin-right: 10px;
-    width: 114px;
+    width: 136px;
     height: 26px;
 }
 
@@ -81,8 +82,9 @@ section p {
 section button {
     height: 40px;
     width: 120px;
-    background-color: orangered;
+    background-color:red;
     color: white;
+    font-size: 15px;
     font-weight: bold;
     border: none;
     border-radius: 6px;
@@ -138,7 +140,7 @@ section>img {
 }
 
 .article a {
-    color: orangered;
+    color: red;
     font-weight: bold;
     font-size: 14px;
 }
@@ -194,6 +196,6 @@ footer {
 .bottom span {
     margin: 0 25px;
     font-size: 14px;
-    color: orangered;
+    color: red;
 }
 
