--- a/Module2/Exercise2/Q2/index.css
+++ b/Module2/Exercise2/Q2/index.css
@@ -15,10 +15,14 @@ a{
     font-size: 28px;
 }
 
+body>div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .main{
     display: flex;
-    position: relative;
-    left: 15%;
     flex-direction: column;
     align-items: center;
     margin: 40px;
@@ -61,7 +65,7 @@ a{
 }
 
 .side img{
-    width: 200px;
+    width: 55%;
     height: 151px;
 }
 
@@ -82,14 +86,17 @@ a{
     padding: 10px;
 }
 .date{
-    position: relative;
-    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 10px;
+}
+.date span{
+    padding: 0 5px;
 }
 .date a{
-    position: relative;
-    left: 62%;
+    align-self: flex-end;
 }
 .card img{
-    width: 607px;
+    width: 100%;
     height: 300px;
 }
